--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.DELETE_CACHE_FILES"
@@ -19,10 +19,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        android:screenOrientation="portrait">
-        <activity android:name=".InfoActivity"></activity>
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".LargeFiles"></activity>
+        <activity android:name=".InstalledApks" />
+        <activity android:name=".Suggestion" />
+        <activity android:name=".InfoActivity" />
         <activity android:name=".AllFilesActivity" />
         <activity android:name=".ImageActivity" />
         <activity android:name=".DocumentActivity" />
