--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.example.filemanager"
         minSdkVersion 18
@@ -16,6 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '29.0.3'
 }
 
 dependencies {
@@ -24,8 +29,21 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     //glide
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+//buildscript {
+//    repositories {
+//        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+//        google()
+//        }
+//    }
+//
+//    allprojects {
+//        repositories {
+//            maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+//            google()
+//            }
+//        }
